Version 8.12 (Unreleased)
-------------------------

Version 8.11
------------

- Ignore a ``null`` ``Origin`` header for authentication.
- Added the ability to search for issues that you are subscribed to from the stream view.
- Added the ability to search issues by their last seen timestamp.
- Improved UI for password and API key fields used in integrations
- Fixed bug where API responses would include incorrect `isSubscribed` values for issues.
- Added support for switching to unsymbolicated tracebacks in cocoa.
- Invalidate user sessions when changing password and 2fa settings.
- Add configurable password validators to enforce password strength.
- Send email to specific email when adding a new email rather than sending to all unverified email addresses.
- Allow user to resend email verification to primary email address.
- Added additional detail to subscription help text when viewing a group.
- Add Asana to supported auth backends in social auth (for plugins)
- Cleaner install UI when creating a new project.
- Added support for recording symbols separately in frames independent of the function.
- Reduce noisy Postgres logs from inserting duplicate onboarding rows.
- Added device icons for Apple Watch and Apple TV
- Added export action to group tag details.
- Improved display of user tags.
- Added 'transaction' tag which automatically populates from explicit culprits.
- Added beginnings of repository management to UI (behind `organizations:repos` feature).

Schema Changes
~~~~~~~~~~~~~~

- Added ``User.session_nonce`` column.
- Added ``CommitFileChange`` model.
- Added ``Repository.url`` column.
- Added ``Repository.provider`` column.
- Added ``Repository.config`` column.
- Added ``Repository.external_id`` column.
- Added ``Repository.status`` column.

API Changes
~~~~~~~~~~~

- Added ``/organizations/{org}/config/repos/`` endpoint.
- Added ``/organizations/{org}/repos/{repo}/`` endpoint.

Version 8.10
------------

- New and improved UI.